--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             <h2>Cat Photos</h2>
             <!-- TODO: Add link to the paragraph below!-->
             <p>See more cat photos in our gallery</p>
-            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg">
+            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
         </main>
 
 
