--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
             <h1>CatPhotoApp</h1>
             <h2>Cat Photos</h2>
             <!-- TODO: Add link to the paragraph below!-->
-            <p>See more cat photos in our gallery</p>
-            <a href="https://search.brave.com/images?q=cat+photos&source=web">cat pictures</a>
+            <p>See more <a href="https://search.brave.com/images?q=cat+photos&source=web">cat photos</a> in the gallery</p>
+            <!--<a href="https://search.brave.com/images?q=cat+photos&source=web">cat pictures</a> -->
             <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
         </main>
 
