image has a link

--- a/main.html
+++ b/main.html
@@ -10,11 +10,12 @@
         <main>
             <h1>CatPhotoApp</h1>
             <h2>Cat Photos</h2>
-            <!-- TODO: Add link to the paragraph below!-->
-            <p>See more <a href="https://search.brave.com/images?q=cat+photos&source=web">cat photos</a> in the gallery</p>
-            <!--<a href="https://search.brave.com/images?q=cat+photos&source=web">cat pictures</a> -->
-            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
-        </main>
+            <p>See more <a href="t+photos&sourhttps://search.brave.com/images?q=cace=web" target="_blank">cat photos</a> in the gallery</p>
+            <a href="t+photos&sourhttps://search.brave.com/images?q=cace=web">
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
+        
+            </a>
+            </main>
 
 
     </body>
