--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
         <main>
             <h1>CatPhotoApp</h1>
             <h2>Cat Photos</h2>
-            <p>See more <a href="t+photos&sourhttps://search.brave.com/images?q=cace=web" target="_blank">cat photos</a> in the gallery</p>
-            <a href="t+photos&sourhttps://search.brave.com/images?q=cace=web">
+            <p>See more <a href="https://search.brave.com/images?q=cat%20photos" target="_blank">cat photos</a> in the gallery</p>
+            <a href="https://search.brave.com/images?q=cat%20photos">
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
         
             </a>
