--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
             <h1>CatPhotoApp</h1>
             <h2>Cat Photos</h2>
             <p>See more <a href="https://search.brave.com/images?q=cat%20photos" target="_blank">cat photos</a> in the gallery</p>
-            <a href="https://search.brave.com/images?q=cat%20photos">
+            <a href="https://search.brave.com/images?q=cat%20photos" target="_blank">
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
         
             </a>
