--- a/main.html
+++ b/main.html
@@ -18,6 +18,13 @@
             </section>
             <section>
                 <h2>Cat Lists</h2>
+                <h3>Things cats love:</h3>
+                <ul>
+                    <li>milk</li>
+                    <li>cat nip</li>
+                    <li>laser pointers</li>
+                    <li>unlimited food</li>
+                </ul>
 
             </section>
 
