added a second picture

--- a/main.html
+++ b/main.html
@@ -23,10 +23,13 @@
                     <li>milk</li>
                     <li>cat nip</li>
                     <li>laser pointers</li>
-                    <li>unlimited food</li>
+                    <li>lasagna</li>
                 </ul>
 
             </section>
+            <figure>
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+            </figure>
 
         </main>
 
