--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
             </section>
             <figure>
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+                <figcaption>Cats love lasagna</figcaption>
             </figure>
 
         </main>
