added a new picture

--- a/main.html
+++ b/main.html
@@ -37,6 +37,10 @@
                     <li>other cats</li>
 
                 </ol>
+                <figure>
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg">
+
+                </figure>
 
             </section>
 
