--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 
                 </ol>
                 <figure>
-                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg">
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field">
 
                 </figure>
 
