--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--THIS IS A PROJECT FROM A CURE ON FREECODECAMP!!-->
 <html>
     <head>
 
@@ -39,8 +39,21 @@
                 </ol>
                 <figure>
                     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field">
+                    <figcaption>
+                        Cats <strong>hate</strong> other cats.
+                    </figcaption>
 
                 </figure>
+
+            </section>
+
+            <section>
+                <h2>Cat Form</h2>
+                <form action="https://freecatphotoapp.com/submit-cat-photo">
+                    <input type="text" name="catphotourl">
+
+                </form>
+
 
             </section>
 
