--- a/main.html
+++ b/main.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html> <!--THIS IS A PROJECT FROM A CURE ON FREECODECAMP!!-->
 <html>
     <head>
-
-
-
     </head>
 
     <body>
@@ -50,8 +47,8 @@
             <section>
                 <h2>Cat Form</h2>
                 <form action="https://freecatphotoapp.com/submit-cat-photo">
-                    <label><input type="radio" id="indoor"> Indoor</label>
-                    <label><input type="radio" id="outdoor"> Outdoor</label>
+                    <label><input type="radio" id="indoor" name="indoor-outdoor"> Indoor</label>
+                    <label><input type="radio" id="outdoor" name="indoor-outdoor"> Outdoor</label>
                     <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                     <button type="submit">Submit</button>
 
@@ -64,10 +61,6 @@
 
 
     </body>
-
-
-
-
 
 
 
