fixed the coment

--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--THIS IS A PROJECT FROM A CURE ON FREECODECAMP!!-->
+<!DOCTYPE html> <!--THIS IS A PROJECT FROM A COURSE ON FREECODECAMP!!-->
 <html>
     <head>
     </head>
