--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
                     </fieldset>
                     <fieldset>
                         <legend>What's your cat's personality?</legend>
-                        <input type="checkbox" id="loving"> Loving
+                        <input type="checkbox" id="loving"> <label for="loving">Loving</label>
 
                     </fieldset>
 
