--- a/main.html
+++ b/main.html
@@ -54,7 +54,9 @@
                     </fieldset>
                     <fieldset>
                         <legend>What's your cat's personality?</legend>
-                        <input type="checkbox" id="loving"> <label for="loving">Loving</label>
+                        <input type="checkbox" id="loving" name="personality"> <label for="loving">Loving</label>
+                        <input type="checkbox" id="lazy" name="personality"><label for="lazy">Lazy</label>
+                        <input type="checkbox" id="energetic" name="personality"><label for="energetic">Energetic</label>
 
                     </fieldset>
 
