--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> <!--THIS IS A PROJECT FROM A COURSE ON FREECODECAMP!!-->
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <title>CatPhotoApp</title>
     </head>
 
     <body>
@@ -69,6 +71,11 @@
             </section>
 
         </main>
+
+        <footer>
+
+
+        </footer>
 
 
     </body>
