--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Cafe Menu</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
 
+
+
+        
+    </body>
 
 
 
