--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -3,11 +3,20 @@
     <head>
         <title>Cafe Menu</title>
         <meta charset="utf-8">
+        <style>
+            h1 {
+                text-align: center;
+
+            }
+        </style>
     </head>
     <body>
         <main>
             <h1>CAMPER CAFE</h1>
-
+            <p>Est. 2020</p>
+            <section>
+                <he>Coffee</he>
+            </section>
 
         </main>
 
