--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -4,9 +4,8 @@
         <title>Cafe Menu</title>
         <meta charset="utf-8">
         <style>
-            h1 {
+            h1, h2, p{
                 text-align: center;
-
             }
         </style>
     </head>
@@ -15,7 +14,7 @@
             <h1>CAMPER CAFE</h1>
             <p>Est. 2020</p>
             <section>
-                <he>Coffee</he>
+                <h1>Coffee</h1>
             </section>
 
         </main>
