--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -3,6 +3,7 @@
     <head>
         <title>Cafe Menu</title>
         <meta charset="utf-8">
+        <link href="./cafe_webpage.css" rel="stylesheet">
     </head>
     <body>
         <main>
