--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -7,16 +7,18 @@
         <link href="./cafe_webpage.css" rel="stylesheet">
     </head>
     <body>
-        <main>
-            <h1>CAMPER CAFE</h1>
-            <p>Est. 2020</p>
-            <section>
-                <h1>Coffee</h1>
-            </section>
+        <div id="menu">
+            <main>
+                <h1>CAMPER CAFE</h1>
+                <p>Est. 2020</p>
+                <section>
+                    <h1>Coffee</h1>
+                </section>
 
-        </main>
-
+            </main>
+        </div>
     </body>
+
 
 
 
