background image changed

--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>     <!-- This project is part of freecodecamp course-->
 <html lang="en">
     <head>
         <title>Cafe Menu</title>
