--- a/cafe_webpage.html
+++ b/cafe_webpage.html
@@ -17,16 +17,16 @@
                         <p class="flavor">French Vanilla</p><p class="price">3.00</p>
                     </article>
                     <article class="item">
-                        <p class="flawor">Caramel Macchiato</p><p class="price">3.75</p>
+                        <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
                     </article>
                     <article class="item">
                         <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
                     </article>
                     <article class="item">
-                        <p class="flawor">Hazelnut</p><p class="price">4.00</p>                        
+                        <p class="flavor">Hazelnut</p><p class="price">4.00</p>                        
                     </article>
                     <article class="item">
-                        <p class="flawor">Mocha</p><p class="price">4.50</p>
+                        <p class="flavor">Mocha</p><p class="price">4.50</p>
                     </article>
                 </section>
 
