--- a/colored_markers.html
+++ b/colored_markers.html
@@ -4,10 +4,10 @@
         <title>Colored Markers</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initioal-scale=1.0">
-
+        <link rel="stylesheet" href="./colored_markers.css">
     </head>
     <body>
-
+        <h1>CSS Color Markers</h1>
 
     </body>
 
