added the first marker

--- a/colored_markers.html
+++ b/colored_markers.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <h1>CSS Color Markers</h1>
+        <div class="container">
+            <div class="marker">
 
+            </div>
+        </div>
     </body>
 
 
