added another image

--- a/Dasmoto'sArts.html
+++ b/Dasmoto'sArts.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <link rel="stylesheet" href="./dasmoto'sArts.css">
+
+    </head>
     <header>
-
-
+        <h1>Dasmoto’s Arts & Crafts</h1>
     </header>
     <body>
-        <head>
-            <h1>Dasmoto’s Arts & Crafts</h1>
-        </head>
+        <main>
+            <h2>Brushes</h2>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt="brushes" class="brushes">
+            
+        </main>
+        
 
 
 
