--- a/Dasmoto'sArts.html
+++ b/Dasmoto'sArts.html
@@ -24,6 +24,13 @@
                 <h3 class="frames-description">Art Frames (assorted)</h3>
                 <p class="fremes-p">Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.<span class="frames-price">Starting at $2.00 / frame.</span></p>
             </div>
+            <div>
+                <h2 class="paint">Paint</h2>
+                <img alt="paint" src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg">
+                <h3 class="paint-description">Clean Finnish Paint</h3>
+                <p class="paint-p">Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span class="paint-price">Starting at $5.00 / tube.</span></p>
+
+            </div>
         
         </main>
         
