started forming the page

--- a/registration_form.html
+++ b/registration_form.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="./registration_form.css">
     </head>
     <body>
+        <h1>Registration Form</h1>
+        <p>Please fill out this form with the required information1</p>
+        <form action="https://register-demo.freecodecamp.org" method="POST">
+            <fieldset></fieldset>
+            <fieldset></fieldset>
+            <fieldset></fieldset>
 
+        </form>
     </body>
 
 
