--- a/registration_form.html
+++ b/registration_form.html
@@ -9,7 +9,12 @@
         <h1>Registration Form</h1>
         <p>Please fill out this form with the required information1</p>
         <form action="https://register-demo.freecodecamp.org" method="POST">
-            <fieldset></fieldset>
+            <fieldset>
+                <label for="first-name">Enter Your First Name: <input id="first-name" type="text"> </input></label>
+                <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"> </input></label>
+                <label for="email">Enter Your Email: <input id="email" type="email"> </input></label>
+                <label for="new-password">Create a New Password: <input id="new-password" type="password"> </input></label>
+            </fieldset>
             <fieldset></fieldset>
             <fieldset></fieldset>
 
