--- a/registration_form.html
+++ b/registration_form.html
@@ -10,13 +10,14 @@
         <p>Please fill out this form with the required information1</p>
         <form action="https://register-demo.freecodecamp.org" method="POST">
             <fieldset>
-                <label for="first-name">Enter Your First Name: <input id="first-name" type="text"> </input></label>
-                <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"> </input></label>
-                <label for="email">Enter Your Email: <input id="email" type="email"> </input></label>
-                <label for="new-password">Create a New Password: <input id="new-password" type="password"> </input></label>
+                <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required> </input></label>
+                <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required> </input></label>
+                <label for="email">Enter Your Email: <input id="email" type="email" required> </input></label>
+                <label for="new-password">Create a New Password: <input id="new-password" type="password" required minlength="8"> </input></label>
             </fieldset>
             <fieldset></fieldset>
             <fieldset></fieldset>
+            <input type="submit" value="Submit"></input>
 
         </form>
     </body>
