--- a/registration_form.html
+++ b/registration_form.html
@@ -16,8 +16,9 @@
                 <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"> </input></label>
             </fieldset>
             <fieldset>
-                <label><input type="radio" name="account-type"> Personal</input></label>
-                <label><input type="radio" name="account-type"> Business</input></label>
+                <legend>Account type (required)</legend>
+                <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"> Personal</input></label>
+                <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
             </fieldset>
             <fieldset></fieldset>
             <input type="submit" value="Submit"></input>
