--- a/registration_form.html
+++ b/registration_form.html
@@ -21,6 +21,7 @@
                 <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
             </fieldset>
             <fieldset></fieldset>
+            <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             <input type="submit" value="Submit"></input>
 
         </form>
