--- a/registration_form.html
+++ b/registration_form.html
@@ -20,7 +20,19 @@
                 <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"> Personal</input></label>
                 <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
             </fieldset>
-            <fieldset></fieldset>
+            <fieldset>
+                <label>Upload a profile picture: <input type="file"></label></label>
+                <label>Input your age (years): <input type="number" min="13" max="120"></input></label>
+                <select>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+
+                </select>
+
+            </fieldset>
             <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             <input type="submit" value="Submit"></input>
 
