added for's and id's

--- a/registration_form.html
+++ b/registration_form.html
@@ -21,10 +21,10 @@
                 <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
             </fieldset>
             <fieldset>
-                <label>Upload a profile picture: <input type="file"></label></label>
-                <label>Input your age (years): <input type="number" min="13" max="120"></input></label>
-                <label> How did you hear about us?
-                    <select>
+                <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture"></label></label>
+                <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age"></input></label>
+                <label for="referrer"> How did you hear about us?
+                    <select id="referrer">
                         <option value="">(select one)</option>
                         <option value="1">freeCodeCamp News</option>
                         <option value="2">freeCodeCamp YouTube Channel</option>
@@ -33,7 +33,7 @@
                     
                     </select>
                 </label>
-
+                <label for="bio">Provide a bio:<textarea id="bio"></textarea></label>
             </fieldset>
             <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             <input type="submit" value="Submit"></input>
