--- a/registration_form.html
+++ b/registration_form.html
@@ -10,10 +10,10 @@
         <p>Please fill out this form with the required information1</p>
         <form action="https://register-demo.freecodecamp.org" method="POST">
             <fieldset>
-                <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required> </input></label>
-                <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required> </input></label>
-                <label for="email">Enter Your Email: <input id="email" type="email" required> </input></label>
-                <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"> </input></label>
+                <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required name="first-name"></input></label>
+                <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required name="last-name"> </input></label>
+                <label for="email">Enter Your Email: <input id="email" type="email" required name="email"> </input></label>
+                <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}" name="password"> </input></label>
             </fieldset>
             <fieldset>
                 <legend>Account type (required)</legend>
@@ -21,10 +21,10 @@
                 <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
             </fieldset>
             <fieldset>
-                <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture"></label></label>
-                <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age"></input></label>
+                <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture" name="picture"></label></label>
+                <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age" name="age"></input></label>
                 <label for="referrer"> How did you hear about us?
-                    <select id="referrer">
+                    <select id="referrer" name="referrer">
                         <option value="">(select one)</option>
                         <option value="1">freeCodeCamp News</option>
                         <option value="2">freeCodeCamp YouTube Channel</option>
@@ -33,9 +33,9 @@
                     
                     </select>
                 </label>
-                <label for="bio">Provide a bio:<textarea id="bio"></textarea></label>
+                <label for="bio">Provide a bio:<textarea id="bio" rows="3" cols="30" placeholder="I like coding on the beach.." name="bio"></textarea></label>
             </fieldset>
-            <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             <input type="submit" value="Submit"></input>
 
         </form>
