added extra styling

--- a/registration_form.html
+++ b/registration_form.html
@@ -17,8 +17,8 @@
             </fieldset>
             <fieldset>
                 <legend>Account type (required)</legend>
-                <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"> Personal</input></label>
-                <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business</input></label>
+                <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account" class="inline"> Personal</input></label>
+                <label for="business-account"><input type="radio" name="account-type" id="business-account" class="inline"> Business</input></label>
             </fieldset>
             <fieldset>
                 <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture" name="picture"></label></label>
