--- a/registration_form.html
+++ b/registration_form.html
@@ -35,7 +35,7 @@
                 </label>
                 <label for="bio">Provide a bio:<textarea id="bio" rows="3" cols="30" placeholder="I like coding on the beach.." name="bio"></textarea></label>
             </fieldset>
-            <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="terms-and-conditions"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="terms-and-conditions" class="inline"></input>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             <input type="submit" value="Submit"></input>
 
         </form>
